# hdr-enabled-weston

./: README.md  meson.build  meson_options.txt
clients/: lg-sample.c  meson.build  simple-hdr-video-gbm.c  simple-hdr-video.c
compositor/: main.c
include/libweston/: backend-drm.h  backend-headless.h  colorspace.h  hdr_metadata_defs.h  libweston.h  matrix.h  meson.build
lg-remoting/: lg-remoting-plugin.c  meson.build
libweston/: colorspace.c  compositor.c  hdr_metadata.c  launcher-direct.c  launcher-logind.c  launcher-util.c  launcher-weston-launch.c  meson.build  noop-renderer.c  pixel-formats.c  pixman-renderer.c
libweston/backend-drm/: drm-gbm.c  drm-hdr-metadata.c  drm-hdr-metadata.h  drm-internal.h  drm-virtual.c  drm.c  kms.c  meson.build  modes.c  state-propose.c
libweston/backend-headless/: headless-internal.h  headless-virtual.c  headless.c  meson.build
libweston/renderer-gl/: gl-renderer-internal.h  gl-renderer-private.h  gl-renderer.c  gl-shaders.c  meson.build
pipewire/: pipewire-plugin.c
protocol/: lg-remote.xml  meson.build
remoting/: remoting-plugin.c
shared/: colorspace.c  csc.c  csc.h  matrix.c
